--- a/landingpage.css
+++ b/landingpage.css
@@ -604,12 +604,16 @@ header{
 
 /* SECT-THREE */
 
-.virtual-container {
+.sect-3{
+    background-color: #f2f8f3;
+    padding: 30px 0;
+}
+.virtual-wrap {
   max-width: 80%;
   margin: 50px auto;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(2, 450px);
+  grid-template-columns: repeat(2, 480px);
   justify-content: center;
   gap: 24px;
 }
@@ -619,25 +623,31 @@ header{
   padding: 25px 25px 25px 10px;
   background-color: #fff;
   box-shadow: 0 3px 8px rgba(0,0,0,0.05);
-  border: 2px solid red;
-  max-height: 300px;
+  /* border: 2px solid red; */
+  /* width: 480px; */
+  max-height: 360px;
 }
 
 .text-virtual {
   background-color: #f1f7f4;
   box-shadow: none;
   padding: 30px;
+ text-align: center;
 }
 
 .text-virtual h2 {
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-weight: bold;
   color: #111;
+   width: 80%;
+   margin: 20px auto;
 }
 
 .text-virtual p {
   font-size: 1rem;
   color: #333;
+  width: 60%;
+  margin: auto;
 }
 
 .green-virtual{
@@ -653,7 +663,7 @@ header{
   max-width: 140px;
   border-radius: 12px;
   margin-top: 10px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   transform: translateY(20%);
 }
 
@@ -665,6 +675,7 @@ header{
 }
 .blue-textone h2{
   color: #3296FF;
+  font-size: 2em;
 }
 
 .virtual-links{
@@ -835,18 +846,41 @@ header{
 
 
 /* SECT-3-MEDiA-QUERY */
-@media (max-width: 954px) {
-  .cards-container {
+@media (max-width: 1008px) {
+  .virtual-wrap {
     max-width: 100%;
     border: 2px solid black;
-    padding: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+    padding: 30px 10px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .virtual{
+    max-height: 390px;
   }
 }
 
+@media(max-width: 500px){
+    .virtual{
+        max-height: 370px;
+    }
+  .green-text p, .blue-textone p, .pink-text p, .purple-text p, .blue-text p{
+    font-size: .8em;
+  }
+
+  .blue-imgone img, .pink-img img, .purple-img img, .blue-imgtwo img, .green-image img{
+    max-width: 100px;
+    transform: translateX(10%);
+  }
+
+  .blue-virtual:hover.blue-imgone img, .pink-virtual:hover .pink-img img, .purple-virtual:hover .purple-img img, .blue-virtualtwo:hover .blue-imgtwo img{
+    transform: translateX(10px);
+  }
+
+}
+
 @media(max-width: 380px){
-  .cards-container{
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    .green-text h2, .blue-textone h2, .pink-text h2, .purple-text h2, .blue-text h2{
+    font-size: 1.4em;
   }
 }
 
