--- a/landingpage.css
+++ b/landingpage.css
@@ -613,19 +613,19 @@ header{
   margin: 50px auto;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(2, 480px);
+  grid-template-columns: repeat(2, 470px);
   justify-content: center;
   gap: 24px;
 }
 
 .virtual {
   border-radius: 16px;
-  padding: 25px 25px 25px 10px;
+  padding: 25px 25px 30px 25px;
   background-color: #fff;
   box-shadow: 0 3px 8px rgba(0,0,0,0.05);
   /* border: 2px solid red; */
   /* width: 480px; */
-  max-height: 360px;
+  max-height: 310px;
 }
 
 .text-virtual {
@@ -655,10 +655,31 @@ header{
   color: #fff;
   display: flex;
   justify-content: space-between;
+  gap: .4em;
   overflow: hidden;
 }
 
+.green-text h2{
+    font-size: 1.6em;
+    color: #FFFFFF;
+    font-weight: 600;
+}
 
+.green-text p{
+    color: #FFFFFF;
+    font-size: .9em;
+}
+
+.green-text a{
+    color: #FFFFFF;
+    text-decoration: none;
+    font-size: .9em;
+    font-weight: 500;
+}
+
+.green-text a:hover{
+    text-decoration: underline;
+}
 .green-image img{
   max-width: 140px;
   border-radius: 12px;
@@ -671,22 +692,27 @@ header{
   color: #fff;
   display: flex;
   justify-content: space-between;
+  gap: .4em;
   overflow: hidden;
 }
 .blue-textone h2{
   color: #3296FF;
-  font-size: 2em;
+  font-size: 1.6em;
+  font-weight: 600;
 }
 
 .virtual-links{
-  margin-top: 25%;
+  margin-top: 20%;
 }
 .blue-textone a{
   color: #3296FF;
+  text-decoration: none;
+  font-size: .9em;
+    font-weight: 500;
 }
 .blue-textone p{
   color: #333;
-  /* font-size: .9em; */
+  font-size: .9em;
 }
 .blue-imgone img, .pink-img img, .purple-img img, .blue-imgtwo img{
   max-width: 160px;
@@ -710,6 +736,10 @@ header{
 .blue-virtual:hover .blue-textone a{
   color: #ffff;
 }
+
+.blue-textone a:hover{
+  text-decoration: underline;
+}
 .blue-virtual:hover .blue-textone p{
   color: #ffff;
 }
@@ -724,21 +754,28 @@ header{
   color: #fff;
   display: flex;
   justify-content: space-between;
+  gap: .4em;
   overflow: hidden;
 }
 
 .pink-text h2{
   color: #EB008B;
+  font-size: 1.6em;
+  font-weight: 600;
 }
 
 .virtual-links{
-  margin-top: 25%;
+  margin-top: 20%;
 }
 .pink-text a {
   color: #EB008B;
+  font-size: .9em;
+    font-weight: 500;
+    text-decoration: none;
 }
 .pink-text p{
   color: #333;
+  font-size: .9em;
 }
 .pink-virtual:hover{
    transition: background-color 0.3s ease;
@@ -751,6 +788,10 @@ header{
 
 .pink-virtual:hover .pink-text a{
   color: #fff;
+}
+
+.pink-text a:hover{
+  text-decoration: underline;
 }
 .pink-virtual:hover .pink-text p{
   color: #ffff;
@@ -766,21 +807,28 @@ header{
   color: #fff;
   display: flex;
   justify-content: space-between;
+  gap: .4em;
   overflow: hidden;
 }
 
 .purple-text h2{
   color: #7200F9;
+  font-size: 1.6em;
+  font-weight: 600;
 }
 
 .virtual-links{
-  margin-top: 25%;
+  margin-top: 20%;
 }
 .purple-text a {
   color: #7200F9;
+  text-decoration: none;
+  font-size: .9em;
+    font-weight: 500;
 }
 .purple-text p{
   color: #333;
+  font-size: .9em;
 }
 .purple-virtual:hover{
    transition: background-color 0.3s ease;
@@ -793,6 +841,10 @@ header{
 
 .purple-virtual:hover .purple-text a{
   color: #fff;
+}
+
+.purple-text a:hover{
+  text-decoration: underline;
 }
 .purple-virtual:hover .purple-text p{
   color: #ffff;
@@ -807,21 +859,28 @@ header{
   color: #fff;
   display: flex;
   justify-content: space-between;
+  gap: .4em;
   overflow: hidden;
 }
 
 .blue-text h2{
   color: #0055FF;
+  font-size: 1.6em;
+  font-weight: 600;
 }
 
 .virtual-links{
-  margin-top: 25%;
+  margin-top: 20%;
 }
 .blue-text a {
   color: #0055FF;
+  text-decoration: none;
+  font-size: .9em;
+    font-weight: 500;
 }
 .blue-text p{
   color: #333;
+  font-size: .9em;
 }
 .blue-virtualtwo:hover{
    transition: background-color 0.3s ease;
@@ -835,6 +894,10 @@ header{
 .blue-virtualtwo:hover .blue-text a{
   color: #fff;
 }
+
+.blue-text a:hover{
+    text-decoration: underline;
+}
 .blue-virtualtwo:hover .blue-text p{
   color: #ffff;
 }
@@ -847,40 +910,57 @@ header{
 
 /* SECT-3-MEDiA-QUERY */
 @media (max-width: 1008px) {
-  .virtual-wrap {
+  
+
+  /* .virtual{
+    max-height: 390px;
+  } */
+}
+
+@media(max-width: 978px){
+    .virtual-wrap {
     max-width: 100%;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     padding: 30px 10px;
     grid-template-columns: repeat(1, 1fr);
   }
-
-  .virtual{
-    max-height: 390px;
-  }
 }
-
 @media(max-width: 500px){
-    .virtual{
-        max-height: 370px;
-    }
-  .green-text p, .blue-textone p, .pink-text p, .purple-text p, .blue-text p{
-    font-size: .8em;
-  }
 
   .blue-imgone img, .pink-img img, .purple-img img, .blue-imgtwo img, .green-image img{
     max-width: 100px;
     transform: translateX(10%);
+    transform: translateY(50%);
   }
 
   .blue-virtual:hover.blue-imgone img, .pink-virtual:hover .pink-img img, .purple-virtual:hover .purple-img img, .blue-virtualtwo:hover .blue-imgtwo img{
     transform: translateX(10px);
+    transform: translateY(50%);
   }
 
 }
 
-@media(max-width: 380px){
+@media(max-width: 400px){
+    .virtual{
+        padding: 25px 10px 30px 10px;
+    }
+
     .green-text h2, .blue-textone h2, .pink-text h2, .purple-text h2, .blue-text h2{
-    font-size: 1.4em;
+    font-size: 1.2em;
+  }
+    .green-text p, .blue-textone p, .pink-text p, .purple-text p, .blue-text p{
+    font-size: .8em;
+  }
+
+  .blue-imgone img, .pink-img img, .purple-img img, .blue-imgtwo img, .green-image img{
+    max-width: 80px;
+    transform: translateX(10%);
+    transform: translateY(80%);
+  }
+
+  .blue-virtual:hover.blue-imgone img, .pink-virtual:hover .pink-img img, .purple-virtual:hover .purple-img img, .blue-virtualtwo:hover .blue-imgtwo img{
+    transform: translateX(10%);
+    transform: translateY(80%);
   }
 }
 
@@ -1309,7 +1389,7 @@ header{
 /* SECT-7 */
 
 .sect-7{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     background-color: #f2f8f3;
     padding: 30px 0 0 0;
 }
@@ -1640,19 +1720,19 @@ header{
     }
 }
 
+
 /* FOOTER */
 footer{
-    border: 2px solid red;
     padding: 20px 0;
     background-color: #f2f8f3;
 }
 
 .footer-wrap{
-    border: 2px solid blue;
     width: 86%;
     margin: auto;
     background-color: #FFFFFF;
-    padding: 30px 0;
+    /* height: 100vh; */
+    padding: 10px 0 30px 0;
 }
 
 .footer-head{
@@ -1693,25 +1773,216 @@ footer{
 
 .footer-line1{
     border-top: thin solid #0A9600;
-    width: 50%;
+    width: 90%;
     margin: auto;
 }
 
+/* FOOTER-CONTENT */
+.footer-content{
+    width: 90%;
+    margin: 60px auto 30px auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 30px;
+}
+
+
+.footer-brand{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
+.footer-links{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.footer-products p, .footer-company p, .footer-legal p{
+    color: #000000;
+    font-size: 1em;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.footer-products li, .footer-company li, .footer-legal li{
+    margin-bottom: 6px;
+}
+.footer-products li a, .footer-company li a, .footer-legal li a{
+    text-decoration: none;
+    color: #556473;
+    font-size: 14px;
+}
+
+
+.footer-social{
+    text-align: end;
+}
+
+.footer-icons{
+    display: flex;
+    justify-content: end;
+    gap: 1em;
+    margin-bottom: 10px;
+}
+
+.footer-icon{
+    font-size: 1em;
+    color: #3D4F60;
+}
+
+.linktree{
+    color: #298000;
+    font-size: .9em;
+    text-decoration: none;
+}
+
+.support{
+    color: #556473;
+    text-decoration: none;
+    font-size: .9em;
+}
+
+.cardi-afri{
+    margin-top: 30px;
+}
+.africa{
+    color: #556473;
+    text-decoration: none;
+    font-size: .9em;
+}
+
+.footer-line2{
+    border-top: thin solid #dfdcdc;
+    width: 90%;
+    margin: auto;
+}
+
+/* FOOTER-INFO */
+.footer-info{
+    width: 86%;
+    margin:60px auto 30px auto;
+    display: grid;
+    grid-template-columns: 1.6fr 1fr;
+}
+
+.footer-text{
+    text-align: justify;
+}
+.footer-text p{
+    font-size: .9em;
+    color: #556473;
+    margin-bottom: 20px;
+}
+
+.footer-text span{
+    color: #36B274;
+}
+.footer-review{
+    text-align: end;
+}
+
+.footer-stars{
+    margin-bottom: 10px;
+}
+.footer-stars .fa-star{
+    background-color: #10B259;
+    padding: 8px 8px;
+    font-size: .8em;
+    color: white;
+}
+
+.footer-stars span .fa-star{
+    background-color: #D9D9D9;
+}
+
+.footer-review p{
+    font-size: .8em;
+    font-weight: 550;
+}
+
+.footer-review p .fa-star{
+    color: #10B259;
+}
 /* FOOTER-IMAGE-MEDIA-QUERY */
 
-@media(max-width: 970px){
+@media(max-width: 1050px){
+   .footer-wrap{
+    width: 92%;
+   }
+
+}
+
+@media(max-width: 975px){
     .footer-wrap{
         width: 100%;
     }
+
     .footer-images{
-        width: 80%
+        width: 94%;
+    }
+    .footer-line1{
+        width: 94%;
+    }
+    .footer-content{
+        width: 94%;
+        grid-template-columns: 1fr;
+    }
+    .footer-brand{
+        align-items: center;
+        flex-direction: row;
+    }
+    .footer-social{
+        text-align: start;
+    }
+    .footer-icons{
+        justify-content: start;
+    }
+    .footer-line2{
+        width: 94%;
+    }
+    .footer-info{
+        width: 94%;
+    }
+    .footer-text p{
+        font-size: .7em;
     }
 }
 
-@media(max-width: 550px){
-    .footer-images{
-        width: 88%;
+@media(max-width: 765px){
+    .footer-info{
+        grid-template-columns: 1fr;
+        gap:2em;
+    }
+
+    .footer-text p{
+        font-size: .9em;
+    }
+
+    .footer-review{
+        text-align: start;
+    }
+    .footer-stars .fa-star{
+        padding: 10px;
+        font-size: .9em;
+    }
+    .footer-review p{
+        font-size: .9em;
+    }
+}
+@media(max-width: 660px){
+    .footer-links{
+        grid-template-columns: 1fr 1fr;
     }
 }
 
-
+@media(max-width: 580px){
+    .footer-brand{
+        flex-direction: column;
+    }
+}
+@media(max-width: 520px){
+    .footer-company{
+        text-align: center;
+    }
+}
