--- a/othercsspages/resources.css
+++ b/othercsspages/resources.css
@@ -395,7 +395,7 @@ header{
 /* SECT-3 */
 
 .sect-3{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     background-color: #f2f8f3;
     padding: 30px 0 0 0;
 }
@@ -728,20 +728,18 @@ header{
     }
 }
 
-
 /* FOOTER */
 footer{
-    border: 2px solid red;
     padding: 20px 0;
     background-color: #f2f8f3;
 }
 
 .footer-wrap{
-    border: 2px solid blue;
     width: 86%;
     margin: auto;
     background-color: #FFFFFF;
-    padding: 30px 0;
+    /* height: 100vh; */
+    padding: 10px 0 30px 0;
 }
 
 .footer-head{
@@ -786,19 +784,212 @@ footer{
     margin: auto;
 }
 
+/* FOOTER-CONTENT */
+.footer-content{
+    width: 90%;
+    margin: 60px auto 30px auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 30px;
+}
+
+
+.footer-brand{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
+.footer-links{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.footer-products p, .footer-company p, .footer-legal p{
+    color: #000000;
+    font-size: 1em;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.footer-products li, .footer-company li, .footer-legal li{
+    margin-bottom: 6px;
+}
+.footer-products li a, .footer-company li a, .footer-legal li a{
+    text-decoration: none;
+    color: #556473;
+    font-size: 14px;
+}
+
+
+.footer-social{
+    text-align: end;
+}
+
+.footer-icons{
+    display: flex;
+    justify-content: end;
+    gap: 1em;
+    margin-bottom: 10px;
+}
+
+.footer-icon{
+    font-size: 1em;
+    color: #3D4F60;
+}
+
+.linktree{
+    color: #298000;
+    font-size: .9em;
+    text-decoration: none;
+}
+
+.support{
+    color: #556473;
+    text-decoration: none;
+    font-size: .9em;
+}
+
+.cardi-afri{
+    margin-top: 30px;
+}
+.africa{
+    color: #556473;
+    text-decoration: none;
+    font-size: .9em;
+}
+
+.footer-line2{
+    border-top: thin solid #dfdcdc;
+    width: 90%;
+    margin: auto;
+}
+
+/* FOOTER-INFO */
+.footer-info{
+    width: 86%;
+    margin:60px auto 30px auto;
+    display: grid;
+    grid-template-columns: 1.6fr 1fr;
+}
+
+.footer-text{
+    text-align: justify;
+}
+.footer-text p{
+    font-size: .9em;
+    color: #556473;
+    margin-bottom: 20px;
+}
+
+.footer-text span{
+    color: #36B274;
+}
+.footer-review{
+    text-align: end;
+}
+
+.footer-stars{
+    margin-bottom: 10px;
+}
+.footer-stars .fa-star{
+    background-color: #10B259;
+    padding: 8px 8px;
+    font-size: .8em;
+    color: white;
+}
+
+.footer-stars span .fa-star{
+    background-color: #D9D9D9;
+}
+
+.footer-review p{
+    font-size: .8em;
+    font-weight: 550;
+}
+
+.footer-review p .fa-star{
+    color: #10B259;
+}
 /* FOOTER-IMAGE-MEDIA-QUERY */
 
-@media(max-width: 970px){
+@media(max-width: 1050px){
+   .footer-wrap{
+    width: 92%;
+   }
+
+}
+
+@media(max-width: 975px){
     .footer-wrap{
         width: 100%;
     }
+
     .footer-images{
-        width: 80%
+        width: 94%;
+    }
+    .footer-line1{
+        width: 94%;
+    }
+    .footer-content{
+        width: 94%;
+        grid-template-columns: 1fr;
+    }
+    .footer-brand{
+        align-items: center;
+        flex-direction: row;
+    }
+    .footer-social{
+        text-align: start;
+    }
+    .footer-icons{
+        justify-content: start;
+    }
+    .footer-line2{
+        width: 94%;
+    }
+    .footer-info{
+        width: 94%;
+    }
+    .footer-text p{
+        font-size: .7em;
     }
 }
 
-@media(max-width: 550px){
-    .footer-images{
-        width: 88%;
+@media(max-width: 765px){
+    .footer-info{
+        grid-template-columns: 1fr;
+        gap:2em;
+    }
+
+    .footer-text p{
+        font-size: .9em;
+    }
+
+    .footer-review{
+        text-align: start;
+    }
+    .footer-stars .fa-star{
+        padding: 10px;
+        font-size: .9em;
+    }
+    .footer-review p{
+        font-size: .9em;
+    }
+}
+@media(max-width: 660px){
+    .footer-links{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media(max-width: 580px){
+    .footer-brand{
+        flex-direction: column;
+    }
+}
+@media(max-width: 520px){
+    .footer-company{
+        text-align: center;
     }
 }
